Guile NEWS --- history of user-visible changes.
Copyright (C) 1996-2015 Free Software Foundation, Inc.
See the end for copying conditions.

Please send Guile bug reports to bug-guile@gnu.org.



Changes in 2.1.4 (changes since the 2.1.3 alpha release):

* Bug fixes
** Don't replace + with space when splitting and decoding URI paths


[TODO: Fold into generic 2.2 release notes.]
Changes in 2.1.3 (changes since the 2.1.2 alpha release):

* Notable changes
** Complete overhaul of port internals

Guile's ports have been completely overhauled to allow Guile developers
and eventually Guile users to write low-level input and output routines
in Scheme.  The new internals will eventually allow for user-space
tasklets or green threads that suspend to a scheduler when they would
cause blocking I/O, allowing users to write straightforward network
services that parse their input and send their output as if it were
blocking, while under the hood Guile can multiplex many active
connections at once.

At the same time, this change makes Guile's ports implementation much
more maintainable, rationalizing the many legacy port internals and
making sure that the abstractions between the user, Guile's core ports
facility, and the port implementations result in a system that is as
performant and expressive as possible.

The interface to the user has no significant change, neither on the C
side nor on the Scheme side.  However this refactoring has changed the
interface to the port implementor in an incompatible way.  See
"Incompatible changes" below for full details.

** All ports are now buffered, can be targets of `setvbuf'

See "Buffering" in the manual, for more.  A port with a buffer size of 1
is equivalent to an unbuffered port.  Ports may set their default buffer
sizes, and some ports (for example soft ports) are unbuffered by default
for historical reasons.

** Support for non-blocking I/O

See "Non-Blocking I/O" in the manual, for more.

** Removal of port locks
